driver card gap fixing below 600 px

--- a/Css/responsive.css
+++ b/Css/responsive.css
@@ -74,6 +74,14 @@
 
     }
 
+    /* Top driver area  */
+    #top__driver{
+        .driver__card{
+            .card{
+                margin-top: 15px;
+            }
+        }
+    }
 
     /* location area   */
     #location__area{
